--- a/server/package.json
+++ b/server/package.json
@@ -2,6 +2,7 @@
   "name": "expresstemplate",
   "version": "1.0.0",
   "description": "",
+  "type": "module" ,
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -10,15 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "concurrently": "^7.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "express": "^4.17.3",
-    "nodemon": "^2.0.15",
-    "pg-promise": "^10.11.1"
+    "express": "^4.18.1",
+    "pg-promise": "^10.12.0"
   },
   "devDependencies": {
     "eslint": "^8.11.0",
-    "eslint-plugin-react": "^7.29.4"
+    "eslint-plugin-react": "^7.29.4",
+    "nodemon": "^2.0.20"
   }
 }
