--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "create-react-app": "^5.0.0"
+    "create-react-app": "^1.2.1",
+    "react-router-dom": "^6.4.1"
   },
   "devDependencies": {
     "eslint-config-airbnb": "^19.0.4",
